# open-source-lakehouse

./: .gitignore  README.md  kind-cluster.yaml  pyrightconfig.json
charts/cloudnative-pg/: Chart.yaml
charts/cloudnative-pg/templates/: _helpers.tpl
charts/envoy-gateway/: Chart.yaml  values.yaml
charts/envoy-gateway/templates/: envoy-proxy.yaml  gateway-class.yaml  gateway.yaml  http-to-https-redirect.yaml  tls-secret.yaml
charts/keycloak/: Chart.yaml  realm.json  values.yaml
charts/keycloak/templates/: deployment.yaml  httproute.yaml  realm-configmap.yaml  service-alias.yaml  service.yaml
charts/lakekeeper/: Chart.yaml  values.yaml
charts/lakekeeper/templates/: backend-traffic-policy.yaml  cnpg-cluster.yaml  encryption-key-secret.yaml  httproute.yaml  service-alias.yaml
charts/minio/: Chart.yaml  values.yaml
charts/minio/templates/: bucket-job.yaml  deployment.yaml  httproute.yaml  service-alias.yaml  service.yaml
charts/sealed-secrets/: Chart.yaml
charts/seaweedfs/: Chart.yaml  values.yaml
charts/seaweedfs/templates/: bucket-job.yaml  deployment.yaml  httproute.yaml  (+3 more)
charts/starrocks/: Chart.yaml  values.yaml
charts/trino/: Chart.yaml  values.yaml
scripts/: 01_bootstrap.py  02_permissions.py  03_warehouse.py  04_pyiceberg.py  04_trino_query.py  auth.py  config.py  pyproject.toml
scripts/00_setup/: 01_bootstrap.py  02_warehouse.py  03_data.py  04_permissions.py
scripts/duckdb/: h2m.py  m2m.py
scripts/lib/: __init__.py  auth.py  config.py
scripts/oauth/: 01_client_credentials.py  02_device_code.py
scripts/pyiceberg/: 01_m2m.py  02_h2m_manual.py  03_h2m_refresh.py
scripts/setup/: 01_bootstrap.py  03_data.py  04_permissions.py
scripts/spark/: h2m.py  m2m.py
scripts/starrocks/: 01_catalog.py  02_m2m.py  03_h2m_dbeaver.md
scripts/trino/: 01_h2m_browser.py  02_m2m_manual.py  03_m2m_refresh.py
scripts/vended-credentials/: 01_load_table.py  02_remote_sign.py
(+11 files in other folders)
