[project]
name = "lakehouse-workshop"
version = "0.1.0"
description = "Python scripts for the Open Source Lakehouse workshop"
requires-python = ">=3.11,<3.13"
dependencies = [
    "httpx==0.28.1",
    "pyiceberg[s3fs,pyarrow]==0.11.1",
    "trino==0.337.0",
    "pymysql==1.1.1",
    "mysql-connector-python>=9.1.0",
    "pandas",
    "fastavro",
    "pyspark==4.0.2",
    "duckdb>=1.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Install just the shared `lib` package — script subfolders (00_setup, oauth,
# trino, ...) have leading digits and aren't valid module names anyway, so
# they're meant to be run as files, not imported.
packages = ["lib"]

[tool.uv]
# Install the workshop project itself in editable mode so `from lib.config
# import ...` works from any script without sys.path hacks.
package = true

